--- a/mvc1/servlet/build.gradle
+++ b/mvc1/servlet/build.gradle
@@ -17,14 +17,18 @@ configurations {
 
 repositories {
 	mavenCentral()
+	dependencies {
+		implementation 'org.springframework.boot:spring-boot-starter-web'
+		//JSP 추가 시작
+		implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+		implementation 'javax.servlet:jstl'
+		//JSP 추가 끝
+		compileOnly 'org.projectlombok:lombok'
+		annotationProcessor 'org.projectlombok:lombok'
+		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	}
 }
 
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
 
 tasks.named('test') {
 	useJUnitPlatform()
