--- a/springboot/actuator/src/main/resources/application.yml
+++ b/springboot/actuator/src/main/resources/application.yml
@@ -6,6 +6,8 @@ management:
       enabled: true
     env:
       enabled: true
+#  server:
+#    port: 9292
   endpoint:
     shutdown:
       enabled: true
@@ -25,3 +27,8 @@ info:
 logging:
   level:
     hello.controller: debug
+
+server:
+  tomcat:
+    mbeanregistry:
+      enabled: true
